[package]
name = "env-loader"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["web", "env"]
categories = ["env", "server", "web"]
repository = "https://github.com/lemarco/env-loader"
description = "Simple storage for env variables with typings"

[dependencies]
dotenv = { version = "0.15" }
env_loader_convert = { git = "https://github.com/lemarco/env_loader_convert.git", version = "0.1.0" }
