[package]
name = "env-loader"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["web", "env", "settings", "config"]
categories = ["env", "server", "web", "settings", "config"]
repository = "https://github.com/lemarco/env-loader"
description = "Simple storage for env variables with typings"

[dependencies]
dotenv = { version = "0.15" }
env_loader_convert = { version = "0.2" }
